fix bug on mobile ver

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -95,6 +95,7 @@ ul li p {
 .tag_item {
     padding: 2px;
     margin-right: 8px;
+    margin-bottom: 4px;
     border: 1px solid #aaaaaa;
     border-radius: 4px;
 }
